# BBTools

./: .gitignore  README.md  main.py  pyproject.toml
bb_tools/: obb_to_sbb.py  plots.py  utils.py
